[package]
name = "more-asserts"
version = "0.3.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
description = "Small library providing additional assert_* and debug_assert_* macros."
keywords = ["assert", "debug_assert", "debug", "assertions", "testing"]
homepage = "https://github.com/thomcc/rust-more-asserts"
documentation = "https://docs.rs/more-asserts"
repository = "https://github.com/thomcc/rust-more-asserts"
license = "Unlicense OR MIT OR Apache-2.0 OR CC0-1.0"
edition = "2018"

[dependencies]
